--- a/config/gradient_alignment.yaml
+++ b/config/gradient_alignment.yaml
@@ -14,7 +14,7 @@ output_dir: ./gradient_alignment_results  # Output directory for results
 
 # Processing parameters
 max_length: 512  # Maximum sequence length for tokenization
-batch_size: 8  # Batch size for gradient computation
+batch_size: 1  # Batch size for gradient computation (minimum to prevent OOM)
 
 # Output
 output_file: ./gradient_alignment_result.json  # Output file for single mode
